--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
+    "monaco-editor": "^0.52.2",
     "pyodide": "^0.27.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
