--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "swiper": "^11.2.6",
     "three": "^0.157.0"
   },
   "devDependencies": {
@@ -40,6 +41,5 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "vite": "^4.5.10"
-    
   }
 }
