--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,21 +14,33 @@
     "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.88.2",
     "@react-three/fiber": "^8.14.5",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.485.0",
     "next": "^15.2.4",
     "process": "^0.11.10",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.3.1",
+    "react-pro-sidebar": "^1.1.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.30.0",
+    "react-scripts": "^5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
     "reactflow": "^11.11.4",
     "swiper": "^11.2.6",
-    "three": "^0.157.0"
+    "three": "^0.157.0",
+    "web-vitals": "^4.2.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
